       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. Document.cookie= does not restrict the cookie by path and domain


Revision History:
 5-Feb-2003
Acknowledgements:
    Thanks to Navid Vahdat for ServletUnit fixes for invalid session handling and request dispatcher paths
    Thanks to Daniel Sheppard for correcting the return status for HttpServletResponse.sendRedirect

Additions:
    1. ServletUnit now supports HttpServletResponse.flushBuffer()
    2. WebForm.isHiddenParameter returns true if all parameters with the specified name are hidden

Problems Fixed:
    1. Opening a non-HTML window via Javascript no longer raises a NotHTMLException.
    2. ServletUnit now creates a new session if the requested session exists but is marked invalid
    3. ServletUnit was interpreting the getRequestDispatcher path as an absolute path. It now correctly treats it
       as relative to the context root.

 4-Feb-2003
Acknowledgements:
    Thanks to Daniel Sheppard for identifying a problem with meta refresh tags.

Additions:
    1. Added support for <iframe> tag. IFrames work just like regular frames, except that they are embedded in a response
       without a <frameset> tag. IFrame support is controlled by the ClientProperties.iframeSupported property.
    2. ServletUnit now handles https requests, marking them as "secure."

Problems fixed:
    1. Quotes in refresh URL meta tags are now recognized and stripped.

13-Jan-2003
    Notes: upgraded NekoHTML to 0.7.2 which no longer generates superfluous <form> tags.

10-Jan-2003
    Thanks to Alex Beggs for noting the mishandling of non-JavaScript scripts and providing a test case.

Problems fixed:
    1. Scripts marked as something besides JavaScript are now ignored.

 9-Jan-2003
 Acknowledgements:
    Thanks to James Howe for noting the mispelling of the getElementById method
